furnace/generated/ForgeLangAlpha1Parser.py
# Generated from ForgeLangAlpha1.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ForgeLangAlpha1Parser ( Parser ):

    grammarFileName = "ForgeLangAlpha1.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Open'", "'Closed'", "'Showcase'", "'Number'", 
                     "'Weld'", "'Ore'", "'Materials'", "'Data'", "'Int'", 
                     "'Float'", "'Generic'", "'function'", "'Nunction'", 
                     "'Return'", "'If'", "'Else'", "'Switch'", "'Deal'", 
                     "'Base'", "'Do'", "'Fail'", "'Final'", "'And'", "'Or'", 
                     "'Xor'", "'Use'", "'Using'", "'New'", "'Print'", "'Input'", 
                     "'**'", "'<='", "'>='", "'=='", "'!='", "'*'", "'/'", 
                     "'+'", "'-'", "'<'", "'>'", "'='", "';'", "':'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "Open", "Closed", "Showcase", "Number", 
                      "Weld", "Ore", "Materials", "Data", "Int", "Float", 
                      "Generic", "Function", "Nunction", "Return", "If", 
                      "Else", "Switch", "Deal", "Base", "Do", "Fail", "Final", 
                      "And", "Or", "Xor", "Use", "Using", "New", "Print", 
                      "Input", "POW", "LTE", "GTE", "EQ", "NEQ", "MUL", 
                      "DIV", "ADD", "SUB", "LT", "GT", "ASSIGN", "SEMI", 
                      "COLON", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "DOT", "COMMA", "FLOAT", "INT", "STRING", 
                      "INTERP_STRING", "COMMENT", "WS", "ID" ]

    RULE_program = 0
    RULE_topLevelItem = 1
    RULE_importStatement = 2
    RULE_qualifiedName = 3
    RULE_modifier = 4
    RULE_typeDeclaration = 5
    RULE_numberType = 6
    RULE_numberKind = 7
    RULE_oreType = 8
    RULE_materialsType = 9
    RULE_variableDeclaration = 10
    RULE_standardVarDecl = 11
    RULE_materialsConstructorDecl = 12
    RULE_initialization = 13
    RULE_dataDeclaration = 14
    RULE_dataMember = 15
    RULE_objectDeclaration = 16
    RULE_functionDeclaration = 17
    RULE_returnType = 18
    RULE_parameterList = 19
    RULE_parameter = 20
    RULE_statement = 21
    RULE_assignment = 22
    RULE_returnStatement = 23
    RULE_printStatement = 24
    RULE_expressionStatement = 25
    RULE_ifStatement = 26
    RULE_switchStatement = 27
    RULE_doFailFinal = 28
    RULE_block = 29
    RULE_expression = 30
    RULE_argumentList = 31
    RULE_inputType = 32
    RULE_literal = 33

    ruleNames =  [ "program", "topLevelItem", "importStatement", "qualifiedName", 
                   "modifier", "typeDeclaration", "numberType", "numberKind", 
                   "oreType", "materialsType", "variableDeclaration", "standardVarDecl", 
                   "materialsConstructorDecl", "initialization", "dataDeclaration", 
                   "dataMember", "objectDeclaration", "functionDeclaration", 
                   "returnType", "parameterList", "parameter", "statement", 
                   "assignment", "returnStatement", "printStatement", "expressionStatement", 
                   "ifStatement", "switchStatement", "doFailFinal", "block", 
                   "expression", "argumentList", "inputType", "literal" ]

    EOF = Token.EOF
    Open=1
    Closed=2
    Showcase=3
    Number=4
    Weld=5
    Ore=6
    Materials=7
    Data=8
    Int=9
    Float=10
    Generic=11
    Function=12
    Nunction=13
    Return=14
    If=15
    Else=16
    Switch=17
    Deal=18
    Base=19
    Do=20
    Fail=21
    Final=22
    And=23
    Or=24
    Xor=25
    Use=26
    Using=27
    New=28
    Print=29
    Input=30
    POW=31
    LTE=32
    GTE=33
    EQ=34
    NEQ=35
    MUL=36
    DIV=37
    ADD=38
    SUB=39
    LT=40
    GT=41
    ASSIGN=42
    SEMI=43
    COLON=44
    LPAREN=45
    RPAREN=46
    LBRACE=47
    RBRACE=48
    LBRACK=49
    RBRACK=50
    DOT=51
    COMMA=52
    FLOAT=53
    INT=54
    STRING=55
    INTERP_STRING=56
    COMMENT=57
    WS=58
    ID=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ForgeLangAlpha1Parser.EOF, 0)

        def topLevelItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ForgeLangAlpha1Parser.TopLevelItemContext)
            else:
                return self.getTypedRuleContext(ForgeLangAlpha1Parser.TopLevelItemContext,i)


        def getRuleIndex(self):
            return ForgeLangAlpha1Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ForgeLangAlpha1Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 711604751943528958) != 0):
                self.state = 68
                self.topLevelItem()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(ForgeLangAlpha1Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importStatement(self):
            return self.getTypedRuleContext(ForgeLangAlpha1Parser.ImportStatementContext,0)


        def dataDeclaration(self):
            return self.getTypedRuleContext(ForgeLangAlpha1Parser.DataDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(ForgeLangAlpha1Parser.FunctionDeclarationContext,0)


        def statement(self):
            return self.getTypedRuleContext(ForgeLangAlpha1Parser.StatementContext,0)


        def getRuleIndex(self):
            return ForgeLangAlpha1Parser.RULE_topLevelItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelItem" ):
                listener.enterTopLevelItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelItem" ):
                listener.exitTopLevelItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelItem" ):
                return visitor.visitTopLevelItem(self)
            else:
                return visitor.visitChildren(self)




    def topLevelItem(self):

        localctx = ForgeLangAlpha1Parser.TopLevelItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelItem)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.importStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.dataDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.functionDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ForgeLangAlpha1Parser.RULE_importStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class UseImportContext(ImportStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ForgeLangAlpha1Parser.ImportStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Use(self):
            return self.getToken(ForgeLangAlpha1Parser.Use, 0)
        def qualifiedName(self):
            return self.getTypedRuleContext(ForgeLangAlpha1Parser.QualifiedNameContext,0)

        def SEMI(self):
            return self.getToken(ForgeLangAlpha1Parser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseImport" ):
                listener.enterUseImport(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseImport" ):
                listener.exitUseImport(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseImport" ):
                return visitor.visitUseImport(self)
            else:
                return visitor.visitChildren(self)


    class UsingImportContext(ImportStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ForgeLangAlpha1Parser.ImportStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Using(self):
            return self.getToken(ForgeLangAlpha1Parser.Using, 0)
        def qualifiedName(self):
            return self.getTypedRuleContext(ForgeLangAlpha1Parser.QualifiedNameContext,0)

        def COLON(self):
            return self.getToken(ForgeLangAlpha1Parser.COLON, 0)
        def ID(self):
            return self.getToken(ForgeLangAlpha1Parser.ID, 0)
        def SEMI(self):
            return self.getToken(ForgeLangAlpha1Parser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsingImport" ):
                listener.enterUsingImport(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsingImport" ):
                listener.exitUsingImport(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsingImport" ):
                return visitor.visitUsingImport(self)
            else:
                return visitor.visitChildren(self)



    def importStatement(self):

        localctx = ForgeLangAlpha1Parser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importStatement)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                localctx = ForgeLangAlpha1Parser.UseImportContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(ForgeLangAlpha1Parser.Use)
                self.state = 83
                self.qualifiedName()
                self.state = 84
                self.match(ForgeLangAlpha1Parser.SEMI)
                pass
            elif token in [27]:
                localctx = ForgeLangAlpha1Parser.UsingImportContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.match(ForgeLangAlpha1Parser.Using)
                self.state = 87
                self.qualifiedName()
                self.state = 88
                self.match(ForgeLangAlpha1Parser.COLON)
                self.state = 89
                self.match(ForgeLangAlpha1Parser.ID)
                self.state = 90
                self.match(ForgeLangAlpha1Parser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualifiedNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ForgeLangAlpha1Parser.ID)
            else:
                return self.getToken(ForgeLangAlpha1Parser.ID, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(ForgeLangAlpha1Parser.DOT)
            else:
                return self.getToken(ForgeLangAlpha1Parser.DOT, i)

        def getRuleIndex(self):
            return ForgeLangAlpha1Parser.RULE_qualifiedName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifiedName" ):
                listener.enterQualifiedName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifiedName" ):
                listener.exitQualifiedName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQualifiedName" ):
                return visitor.visitQualifiedName(self)
            else:
                return visitor.visitChildren(self)




    def qualifiedName(self):

        localctx = ForgeLangAlpha1Parser.QualifiedNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_qualifiedName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(ForgeLangAlpha1Parser.ID)
            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 95
                    self.match(ForgeLangAlpha1Parser.DOT)
                    self.state = 96
                    self.match(ForgeLangAlpha1Parser.ID) 
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Open(self):
            return self.getToken(ForgeLangAlpha1Parser.Open, 0)

        def Closed(self):
            return self.getToken(ForgeLangAlpha1Parser.Closed, 0)

        def Showcase(self):
            return self.getToken(ForgeLangAlpha1Parser.Showcase, 0)

        def getRuleIndex(self):
            return ForgeLangAlpha1Parser.RULE_modifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModifier" ):
                listener.enterModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModifier" ):
                listener.exitModifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModifier" ):
                return visitor.visitModifier(self)
            else:
                return visitor.visitChildren(self)




    def modifier(self):

        localctx = ForgeLangAlpha1Parser.ModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_modifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numberType(self):
            return self.getTypedRuleContext(ForgeLangAlpha1Parser.NumberTypeContext,0)


        def Weld(self):
            return self.getToken(ForgeLangAlpha1Parser.Weld, 0)

        def oreType(self):
            return self.getTypedRuleContext(ForgeLangAlpha1Parser.OreTypeContext,0)


        def materialsType(self):
            return self.getTypedRuleContext(ForgeLangAlpha1Parser.MaterialsTypeContext,0)


        def ID(self):
            return self.getToken(ForgeLangAlpha1Parser.ID, 0)

        def getRuleIndex(self):
            return ForgeLangAlpha1Parser.RULE_typeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDeclaration" ):
                listener.enterTypeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDeclaration" ):
                listener.exitTypeDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDeclaration" ):
                return visitor.visitTypeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def typeDeclaration(self):

        localctx = ForgeLangAlpha1Parser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typeDeclaration)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.numberType()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(ForgeLangAlpha1Parser.Weld)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.oreType()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.materialsType()
                pass
            elif token in [59]:
                self.enterOuterAlt(localctx, 5)
                self.state = 108
                self.match(ForgeLangAlpha1Parser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Number(self):
            return self.getToken(ForgeLangAlpha1Parser.Number, 0)

        def numberKind(self):
            return self.getTypedRuleContext(ForgeLangAlpha1Parser.NumberKindContext,0)


        def getRuleIndex(self):
            return ForgeLangAlpha1Parser.RULE_numberType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberType" ):
                listener.enterNumberType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberType" ):
                listener.exitNumberType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberType" ):
                return visitor.visitNumberType(self)
            else:
                return visitor.visitChildren(self)




    def numberType(self):

        localctx = ForgeLangAlpha1Parser.NumberTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_numberType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(ForgeLangAlpha1Parser.Number)
            self.state = 112
            self.numberKind()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberKindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Int(self):
            return self.getToken(ForgeLangAlpha1Parser.Int, 0)

        def Float(self):
            return self.getToken(ForgeLangAlpha1Parser.Float, 0)

        def Generic(self):
            return self.getToken(ForgeLangAlpha1Parser.Generic, 0)

        def getRuleIndex(self):
            return ForgeLangAlpha1Parser.RULE_numberKind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberKind" ):
                listener.enterNumberKind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberKind" ):
                listener.exitNumberKind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberKind" ):
                return visitor.visitNumberKind(self)
            else:
                return visitor.visitChildren(self)




    def numberKind(self):

        localctx = ForgeLangAlpha1Parser.NumberKindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_numberKind)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3584) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OreTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ore(self):
            return self.getToken(ForgeLangAlpha1Parser.Ore, 0)

        def LBRACK(self):
            return self.getToken(ForgeLangAlpha1Parser.LBRACK, 0)

        def INT(self):
            return self.getToken(ForgeLangAlpha1Parser.INT, 0)

        def RBRACK(self):
            return self.getToken(ForgeLangAlpha1Parser.RBRACK, 0)

        def getRuleIndex(self):
            return ForgeLangAlpha1Parser.RULE_oreType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOreType" ):
                listener.enterOreType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOreType" ):
                listener.exitOreType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOreType" ):
                return visitor.visitOreType(self)
            else:
                return visitor.visitChildren(self)




    def oreType(self):

        localctx = ForgeLangAlpha1Parser.OreTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_oreType)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(ForgeLangAlpha1Parser.Ore)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(ForgeLangAlpha1Parser.Ore)
                self.state = 118
                self.match(ForgeLangAlpha1Parser.LBRACK)
                self.state = 119
                self.match(ForgeLangAlpha1Parser.INT)
                self.state = 120
                self.match(ForgeLangAlpha1Parser.RBRACK)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MaterialsTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Materials(self):
            return self.getToken(ForgeLangAlpha1Parser.Materials, 0)

        def ID(self):
            return self.getToken(ForgeLangAlpha1Parser.ID, 0)

        def getRuleIndex(self):
            return ForgeLangAlpha1Parser.RULE_materialsType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMaterialsType" ):
                listener.enterMaterialsType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMaterialsType" ):
                listener.exitMaterialsType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMaterialsType" ):
                return visitor.visitMaterialsType(self)
            else:
                return visitor.visitChildren(self)




    def materialsType(self):

        localctx = ForgeLangAlpha1Parser.MaterialsTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_materialsType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(ForgeLangAlpha1Parser.Materials)
            self.state = 124
            self.match(ForgeLangAlpha1Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def standardVarDecl(self):
            return self.getTypedRuleContext(ForgeLangAlpha1Parser.StandardVarDeclContext,0)


        def materialsConstructorDecl(self):
            return self.getTypedRuleContext(ForgeLangAlpha1Parser.MaterialsConstructorDeclContext,0)


        def getRuleIndex(self):
            return ForgeLangAlpha1Parser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)
